--- a/GuessingGame.Shared/Properties/Resources.resx
+++ b/GuessingGame.Shared/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>Correct!</value>
   </data>
   <data name="FileGetterMessage" xml:space="preserve">
-    <value>Modify the file, save it, then press return when ready.</value>
+    <value>Enter a valid number in the file, save it, then press return.</value>
   </data>
   <data name="GameOverMessage" xml:space="preserve">
     <value>Something bad happened. Sorry, game over. Here are some details: </value>
